--- a/keynote/index.html
+++ b/keynote/index.html
@@ -59,6 +59,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
+      <li>
+        <a class="nav-link" href="../team/index.html">Team</a>
+      </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item mr-2">
