added team page

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -48,16 +48,14 @@
       <li class="nav-item">
         <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
-      <!--
-      <li class="nav-item">
-        <a class="nav-link" href="../staff/index.html">Staff</a>
-      </li>
-      -->
       <li class="nav-item active">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
+      </li>
+      <li>
+        <a class="nav-link" href="../team/index.html">Team</a>
       </li>
     </ul>
     <ul class="navbar-nav float-lg-right">
