--- a/team/index.html
+++ b/team/index.html
@@ -48,13 +48,13 @@
           <li class="nav-item">
             <a class="nav-link" href="../faq/index.html">FAQ</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="../schedule/index.html">Schedule</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../contact/index.html">Contact</a>
           </li>
-          <li>
+          <li class="nav-item active">
             <a class="nav-link" href="../team/index.html">Team</a>
           </li>
     </ul>
