updated to new sched

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -80,6 +80,7 @@
   <div class="card card-body">
     <h1 class="text-center">WAC Regular Stream</h1>
     <h2 class="text-center">Febuary 6th, Conference Day</h2>
+    <h4 class="text-center">Note: All times listed are in EST.</h4>
     <div class="table-responsive">
       <table class="table table-hover my-4">
     	  <thead class="thead-dark">
@@ -91,53 +92,48 @@
     	  </thead>
     	  <tbody>
     	    <tr>
-    	      <td>Registration/Networking (Optional)</td>
-    	      <td>8:30 to 9:00</td>
-    	      <td>Zoom</td>
-    	    </tr>
-    	    <tr>
               <td><a href="../addresses/index.html">Opening Address</a></td>
-    	      <td>9:00 to 9:45</td>
+    	      <td>9:00 to 9:40am</td>
     	      <td>GoToWebinar</td>
     	    </tr>
     	    <tr>
     	      <td><a href="../plenaries/index.html">Plenary #1</a></td>
-    	      <td>10:00 to 10:35</td>
+    	      <td>9:45 to 10:10am</td>
     	      <td>GoToWebinar</td>
     	    </tr>
     	    <tr>
     	      <td>Networking (Optional)</td>
-    	      <td>10:40 to 10:55</td>
+    	      <td>10:15 to 10:35am</td>
     	      <td>Zoom</td>
     	    </tr>
     	    <tr>
-    	      <td>Startup Exhibition & Lunch</td>
-    	      <td>11:00 to 12:00</td>
+    	      <td><a href="../plenaries/index.html">Plenary #2</a></td>
+    	      <td>10:40 to 11:05am</td>
+    	      <td>GoToWebinar</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Startup Exhibition &amp; Lunch (Optional)</td>
+    	      <td>11:10 to 11:40am</td>
     	      <td>Zoom</td>
     	    </tr>
     	    <tr>
     	      <td><a href="../keynote/index.html">Keynote Speaker</a></td>
-    	      <td>12:00 to 1:00</td>
-    	      <td>GoToWebinar</td>
-    	    </tr>
-    	    <tr>
-    	      <td><a href="../plenaries/index.html">Plenary #2</a></td>
-    	      <td>1:15 to 1:50</td>
+    	      <td>11:45 to 12:25pm</td>
     	      <td>GoToWebinar</td>
     	    </tr>
     	    <tr>
             <td>Networking (Optional)</td>
-    	      <td>1:50 to 2:05</td>
+    	      <td>12:25 to 12:55pm</td>
     	      <td>Zoom</td>
     	    </tr>
             <tr>
     	      <td><a href="../addresses/index.html">Closing Address</a></td>
-    	      <td>2:10 to 2:55</td>
+    	      <td>1:00 to 1:40pm</td>
     	      <td>GoToWebinar</td>
     	    </tr>
             <tr>
     	      <td>Dismissal</td>
-    	      <td>3:00</td>
+    	      <td>1:45pm</td>
     	      <td></td>
     	    </tr>
     	  </tbody>
