--- a/index.html
+++ b/index.html
@@ -7,20 +7,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Addresses | The World Affairs Conference</title>
+  <title>World Affairs Conference</title>
   <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-  <link rel="stylesheet" href= "../css/bootstrap.min.css">
-  <link rel="stylesheet" href= "../css/style.css">
-  <script src="../js/google_analytics.js"></script>
-  <script defer src="../js/fontawesome-all.min.js"></script>
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="stylesheet" href= "css/bootstrap.min.css">
+  <link rel="stylesheet" href= "css/style.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132383226-1"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-132383226-1');
+  </script>
+  <script defer src="js/fontawesome-all.min.js"></script>
   <style>
 		body{
-			background-image:url("../img/earth.png"),url("../img/stars.png");
+			background-image:url("img/earth.png"),url("img/stars.png");
 			background-repeat:no-repeat;
 		}
 	</style>
@@ -29,7 +36,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <a class="navbar-brand" href="index.html"><img class="nav-image" src="img/wac_logo_full.png" alt="WAC Logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,27 +44,27 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="../keynote/index.html">Keynote</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="../addresses/index.html">Addresses</a>
+        <a class="nav-link" href="keynote/index.html">Keynote</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
+        <a class="nav-link" href="addresses/index.html">Addresses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../faq/index.html">FAQ</a>
+        <a class="nav-link" href="plenaries/index.html">Plenaries</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="faq/index.html">FAQ</a>
       </li>
       <!--
       <li class="nav-item">
-        <a class="nav-link" href="../staff/index.html">Staff</a>
+        <a class="nav-link" href="staff/index.html">Staff</a>
       </li>
       -->
       <li class="nav-item">
-        <a class="nav-link" href="../schedule/index.html">Schedule</a>
+        <a class="nav-link" href="schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../contact/index.html">Contact</a>
+        <a class="nav-link" href="contact/index.html">Contact</a>
       </li>
       <li>
         <a class="nav-link" href="../team/index.html">Team</a>
@@ -65,62 +72,129 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item mr-2">
-        <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
+        <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
+        <!-- <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a> -->
         <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
 </nav>
 
-    <div class="container">
-        <div class="card card-body mb-5">
-            <h1 class="text-center">Opening Address:</h1>
-          
-            <p class = "text-center">
 
 
-            </p>
-            <hr>
+<!-- <div class="container">
+      <div class="alert alert-info" role="alert">
+        Thanks for coming to WAC 2020! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
+      </div>
+</div> -->
 
-            <div class="row">
-                <div class="col">
-                    <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/achisholm.png" alt="Andrew Chisholm"/>
-                    <h2 class="text-center">Andrew Chisholm</h2>
-                    <h4 class="text-center">Corporate Director of RBC</h4>
-                    <p>
-                        Bio coming soon...
 
-                    </p>
-                </div>
-            </div>
+ <div class="index-welcome">
+  <div class="container">
+    <div class="text-center text-md-left">
+      <h2>Welcome to the 2021</h2>
+      <h1>World Affairs Conference</h1>
+      <h3 class="display-5">February 6th</h3>
+    </div>
+    <div class="text-center">
+      This Year's Theme:
+      <h1 class="display-4">Together Towards Tomorrow</h1>
+    </div>
+    <div class="text-center text-md-right">
+      <h4>The Conference is</h4>
+      <h3><span id="countdown"></span></h3>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="card card-body mt-3 mx-3">
+    <div class="row">
+      <div class="col-sm-3">
+        <img class="img-fluid" src="img/wac_logo.svg" alt="WAC Logo"/>
+      </div>
+      <div class="col-sm-9">
+        <h4>What's WAC?</h4>
+        <p>
+          The World Affairs Conference (WAC) is North America's largest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, typically from across North America. Due to the COVID-19 pandemic, the 2021 World Affairs Conference will be hosted online and available worldwide!
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!--<div class="card card-body mt-3">
+      <div class="row">
+        <div class="col-sm-6">
+          <img class="img-fluid rounded" src="img/speakers/jhansen.jpg" alt="James Hansen"/>
+        </div>
+        <div class="col-sm-6">
+          <h3>Featured Speaker</h3>
+          <h4>James Hansen, Keynote Address</h4>
+          <p>
+            Dr. James Hansen, formerly Director of the NASA Goddard Institute for Space Studies, is Adjunct Professor at Columbia University’s Earth Institute, where he directs a program in Climate Science, Awareness and Solutions. Dr. Hansen is best known for his testimony on climate change in the 1980s that helped raise awareness of global warming. He is a member of the U.S. National Academy of Sciences and has received numerous awards including the Sophie and Blue Planet Prizes.
+
+          </p>
         </div>
       </div>
-
-        <div class="container">
-            <div class="card card-body mb-5">
-                <h1 class="text-center">Closing Address: </h1>
-                <p class = "text-center">
-                     
-                </p>
-                <hr>
-                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/alau.png" alt="Allen Lau"/>
-                <h2 class="text-center">Allen Lau</h2>
-                <h4 class="text-center">Co-founder and CEO of Wattpad</h4>
-                <p>
-                Bio coming soon...
-                </p>
-
-                <hr>
-                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/elau.png" alt="Eva Lau"/>
-                <h2 class="text-center">Eva Lau</h2>
-                <h4 class="text-center">Co-founder and CEO of Two Small Fish</h4>
-                <p>
-                Bio coming soon...
-                </p>
-            </div>
+  </div>
+</div>-->
+    <div class="container mt-3">
+      <div class="card card-body">
+        <h2 class="text-center">WAC Promotional Video</h2>
+        <iframe width="840" height="465" style= "border: 1px solid black; margin: auto" src="https://www.youtube.com/embed/9e_q9QhDoIU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <hr>
+        <div class="row pt-5">
+          <div class="col-sm-3">
+            <img class="img-fluid" src="img/snowden.png" alt="Edward Snowden"/>
+          </div>
+          <div class="col-sm-9">
+            <h3>Edward Snowden</h3>
+            <p>
+              Six years ago, Edward Snowden gave the WAC 2015 Lionel Gelber Keynote Address. In June 2013, Snowden leaked highly classified information about the scale and scope of NSA and CIA counter-terrorism and counter-intelligence operations around the globe. Since then, he has become a household name and is among the most influential privacy activists in the world. At the Keynote Address, Snowden explained his views on global privacy issues, government involvement in citizens' lives, and the dangers of the digital age.
+            </p>
+          </div>
         </div>
+      </div>
+    </div>
+</div>
+
+<!-- Pop Up -->
+
+
+
+
+<script type="text/javascript">
+
+  var wacdate = "2/6/2021"; //Countdown date in MM/DD/YYYY format (no 0's required)
+  function getTimeRemaining(endtime){
+
+
+  	var t = Date.parse(endtime) - Date.parse(new Date());
+  	var seconds = Math.floor( (t/1000) % 60 );
+  	var minutes = Math.floor( (t/1000/60) % 60 );
+  	var hours = Math.floor( (t/(1000*60*60)) % 24 );
+  	var days = Math.floor( t/(1000*60*60*24) );
+
+  	if (t > 0){
+  		return "in " + days + " Days, " + hours + " Hours, " + minutes + " Minutes, and " + seconds + " Seconds";
+  	}
+    else if (t < 0) {
+      return "Over!";
+      // return "in progress!"
+    }
+  	else {
+  		return "Oops!";
+  	}
+  }
+  window.setInterval(function(){
+    $("#countdown").html(getTimeRemaining(wacdate));
+  }, 1000);
+
+
+
+</script>
 
 
 
@@ -130,7 +204,7 @@
       The World Affairs Conference website, made by the <a class="white-icon" style="text-decoration:underline;" href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
     </p>
     <p>
-      Have any questions or concerns? Check out <a class="white-icon" href="/faq/" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="/contact/" style="text-decoration:underline;">get in touch with us!</a>
+      Have any questions or concerns? Check out <a class="white-icon" href="faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
     </p>
     <a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
     <a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
@@ -139,10 +213,19 @@
     <a href="https://github.com/worldaffairsconference/world.ac"><span class="fab fa-fw fa-2x fa-github white-icon"></span></a>
   </div>
 </footer>
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/tether.min.js></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/tether.min.js"></script>
 
+<!-- Pop Up! -->
+<script type="text/javascript">
+  if (document.cookie.indexOf("popup") == -1){
+      $(document).ready(function($) {
+        $('#myModal').modal('show');
+      });
+      document.cookie = "cookiename=popup; expires= Fri, 31 Jan 2020 20:00:00 UTC";
+  }
+</script>
 
   </body>
 
