--- a/addresses/index.html
+++ b/addresses/index.html
@@ -105,8 +105,8 @@
                      
                 </p>
                 <hr>
-                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/alau.png" alt="Allan Lau"/>
-                <h2 class="text-center">Allan Lau</h2>
+                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/alau.png" alt="Allen Lau"/>
+                <h2 class="text-center">Allen Lau</h2>
                 <h4 class="text-center">Co-founder and CEO of Wattpad</h4>
                 <p>
                 Bio coming soon...
