frontend stuff for jeff to add backend to

--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
         <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
+        <!-- <div class="dropdown">
+          <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Register
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" target="__blank" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link">Register</a>
+            <a class="dropdown-item" href="reg/test.html">Test</a>
+            <a class="dropdown-item" href="reg/linkhub.html">Link Hub</a>
+          </div>
+        </div> -->
         <!-- <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a> -->
         <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link" data-proofer-ignore>Register</a>
       </li>
