--- a/schedule/index.html
+++ b/schedule/index.html
@@ -139,6 +139,10 @@
     	  </tbody>
     	</table>
     </div>
+
+    <a href="../reg/linkhub.html" style="width: 100%;">
+      <button class="btn btn-primary" style="width: 100%;">Webinar Links</button>
+    </a>
   </div>
 </div>
 
