--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
   	if (t > 0){
   		return "in " + days + " Days, " + hours + " Hours, " + minutes + " Minutes, and " + seconds + " Seconds";
   	}
-    else if (t < 0) {
-      return "Over!";
-      // return "in progress!"
+    else if (t < 0 && t > -86400000) { //86400000 is 1000*60*60*24, one whole day in millis
+      return "In Progress!";
     }
   	else {
-  		return "Oops!";
-  	}
+  		return "Over!";
+    }
+    console.log(t);
   }
   window.setInterval(function(){
     $("#countdown").html(getTimeRemaining(wacdate));
