--- a/reg/success.html
+++ b/reg/success.html
@@ -88,9 +88,16 @@
 			<div class="card card-body">
 				<h1>Success!</h1>
 
-				<p>You are registered for WAC 2020. We look forward to seeing you!</p>
+        <p>You are registered for WAC 2020. We look forward to seeing you!</p>
+        <hr/>
+        <p>You are being redirected, click <a href="https://worldaffairs.ucc.on.ca">here</a> if the browser does not redirect you automatically</p>
 			</div>
-		</div>
+    </div>
+    <script>
+      setTimeout(()=>{
+        window.location.href='https://worldaffairs.ucc.on.ca'
+      },3000)
+    </script>
 
 		<footer class="footer text-center mt-3">
 			<div class="container">
