--- a/contact/index.html
+++ b/contact/index.html
@@ -82,7 +82,7 @@
     </div>
     -->
 
-      <div class="container">
+      <div class="container mt-5">
 
   <div class="card card-body">
     <h1>Need to talk?</h1>
