--- a/reg/success.html
+++ b/reg/success.html
@@ -67,7 +67,7 @@
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="../contact/index.html">Contact</a>
       </li>
     </ul>
