--- a/reg/selection.html
+++ b/reg/selection.html
@@ -64,7 +64,7 @@
         <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       -->
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
       <li class="nav-item">
@@ -81,129 +81,23 @@
     </ul>
   </div>
 </nav>
-<script>
-	function getCookie(name) {
-    var nameEQ = name + "=";
-    var ca = document.cookie.split(';');
-    for(var i=0;i < ca.length;i++) {
-        var c = ca[i];
-        while (c.charAt(0)==' ') c = c.substring(1,c.length);
-        if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
-    }
-    return null;
-}
-	var tr = ""
-	fetch(`https://us-central1-wac2021-d98f6.cloudfunctions.net/verifyToken?token=${getCookie("token")}`)
-		.then((resp,err)=>{
-			return(resp.json())
-		}).then(json=>{
-			const name = json.firstName +" "+json.lastName
-			const main = json.main
-			var p1 = json.p1
-			var p2 = json.p2
-			if(p1 == "N/A"){
-				document.getElementById("p1").innerText = "Select Now"
-				document.getElementById("p1").classList = "btn btn-primary btn-sm"
-				document.getElementById("p1").href = "./selection.html"
-			}else{
-				document.getElementById("p1").href = p1
-			}
-			
-			if(p2 == "N/A"){
-				document.getElementById("p2").innerText = "Select Now"
-				document.getElementById("p2").classList = "btn btn-primary btn-sm"
-				document.getElementById("p2").href = "./selection.html"
-			}else{
-				document.getElementById("p2").href = p1
-			}
 
-			const mains = document.getElementsByClassName("main")
-			for (const element of mains){
-				element.href = main
-			}
-
-			document.getElementById("greeting").innerText="Welcome Back: "+name;
-			document.getElementById("loading").style.display = "none"
-		})
-		.catch(err=>{
-			console.log(err)
-			window.location.href = './lookup.html'
-		})
-	
-		
-	
-</script>
 	<div class="flex-vertical">
 		<div></div>
 		<div class="container">
 			<div class="card card-body">
-				<h4 id="greeting">Welcome Back: </h4>
-				<h1>Event Links Hub</h1>
-				<table class="table">
-					<thead>
-						<tr>
-							<th scope="col">Time</th>
-							<th scope="col">Title</th>
-							<th scope="col">Link</th>
-							<th scope="col">Speaker</th>
-						</tr>
-					</thead>
-					<tbody id="linkHub">
-						<p id="loading">Loading...</p>
-					<tr>
-						<td>9:00-9:40</td>
-						<td>Event Opening</td>
-						<td><a class="main">Link</a></td>
-						<td>Lauren M.| Krishna B.| Andrew C.</td>
-					</tr>
-					<tr>
-						<td>9:45-10:10</td>
-						<td>Plenary 1 </td>
-						<td><a id="p1" href="#">Select Now</a></td>
-						<td>TBD</td>
-					</tr>
-					<tr>
-						<td>10:15-10:35</td>
-						<td>Networking Rooms</td>
-						<td><a href="#">Link</a></td>
-						<td>N/A</td>
-					</tr>
-					<tr>
-						<td>10:40-11:05</td>
-						<td>Plenary 2 </td>
-						<td><a id="p2" href="#">Select Now</a></td>
-						<td>TBD</td>
-					</tr>
-					<tr>
-						<td>11:10-11:40</td>
-						<td>Startup Exhibition</td>
-						<td><a href="#">Link</a></td>
-						<td>N/A</td>
-					</tr>
-					<tr>
-						<td>11:40-12:25</td>
-						<td>Keynote Speaker</td>
-						<td><a class="main" href="#">Link</a></td>
-						<td>TBD</td>
-					</tr>
-					<tr>
-						<td>11:25-12:55</td>
-						<td>Networking Rooms</td>
-						<td><a href="#">Link</a></td>
-						<td>N/A</td>
-					</tr>
-					<tr>
-						<td>13:00-13:45</td>
-						<td>Closing Panel</td>
-						<td><a class="main" href="#">Link</a></td>
-						<td>Eva & Allen Lau | Krishna B.| Lauren M.</td>
-					</tr>
-					</tbody>
-				</table>
-				<hr/>
-				<p>Please <a href="../contact/">contact us</a> if you have any issues or would like to change your plenary selection.</p>
+				<h1>A bit too early...</h1>
+
+        <p>Plenary selections are not open yet! Please come back later</p>
+        <hr/>
+        <p>You are being redirected, click <a href="https://worldaffairs.ucc.on.ca/reg/linkhub.html">here</a> if the browser does not redirect you automatically</p>
 			</div>
-		</div>
+    </div>
+    <script>
+      setTimeout(()=>{
+        window.location.href='https://worldaffairs.ucc.on.ca/reg/linkhub.html'
+      },5000)
+    </script>
 
 		<footer class="footer text-center mt-3">
 			<div class="container">
