📱Optimize mobile usability

--- a/reg/linkhub.html
+++ b/reg/linkhub.html
@@ -102,7 +102,7 @@
 			var p1 = json.p1
 			var p2 = json.p2
 			if(p1 == "N/A"){
-				document.getElementById("p1").innerText = "Select Now"
+				document.getElementById("p1").innerText = "Select"
 				document.getElementById("p1").classList = "btn btn-primary btn-sm"
 				document.getElementById("p1").href = "./selection.html"
 			}else{
@@ -110,7 +110,7 @@
 			}
 			
 			if(p2 == "N/A"){
-				document.getElementById("p2").innerText = "Select Now"
+				document.getElementById("p2").innerText = "Select"
 				document.getElementById("p2").classList = "btn btn-primary btn-sm"
 				document.getElementById("p2").href = "./selection.html"
 			}else{
@@ -159,7 +159,7 @@
 					<tr>
 						<td>9:45-10:10</td>
 						<td>Plenary 1 </td>
-						<td><a id="p1" href="#">Select Now</a></td>
+						<td><a id="p1" href="#">Select</a></td>
 						<td>TBD</td>
 					</tr>
 					<tr>
@@ -171,7 +171,7 @@
 					<tr>
 						<td>10:40-11:05</td>
 						<td>Plenary 2 </td>
-						<td><a id="p2" href="#">Select Now</a></td>
+						<td><a id="p2" href="#">Select</a></td>
 						<td>TBD</td>
 					</tr>
 					<tr>
