--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="container mt-3">
       <div class="card card-body">
         <h2 class="text-center">WAC Promotional Video</h2>
-        <iframe width="840" height="465" style= "border: 1px solid black; margin: auto" src="https://www.youtube.com/embed/9e_q9QhDoIU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="80%" height="465" style= "border: 1px solid black; margin: auto" src="https://www.youtube.com/embed/9e_q9QhDoIU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <hr>
         <div class="row pt-5">
           <div class="col-sm-3">
