📱Optimize table for moblie use

--- a/reg/linkhub.html
+++ b/reg/linkhub.html
@@ -139,7 +139,8 @@
 			<div class="card card-body">
 				<h4 id="greeting">Welcome Back: </h4>
 				<h1>Event Links Hub</h1>
-				<table class="table">
+				<div class="table-responsive">
+					<table class="table table-hover my-4">
 					<thead>
 						<tr>
 							<th scope="col">Time</th>
@@ -200,6 +201,7 @@
 					</tr>
 					</tbody>
 				</table>
+				</div>
 				<hr/>
 				<p>Please <a href="../contact/">contact us</a> if you have any issues or would like to change your plenary selection.</p>
 			</div>
