Update registration link source tracking + select plenary preperation

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
             Register
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" target="__blank" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link">Register</a>
+            <a class="dropdown-item" target="__blank" href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage">Register</a>
             <a class="dropdown-item" href="reg/test.html">Test</a>
             <a class="dropdown-item" href="reg/linkhub.html">Link Hub</a>
           </div>
         </div> -->
         <!-- <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a> -->
-        <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
