--- a/reg/linkhub.html
+++ b/reg/linkhub.html
@@ -76,7 +76,7 @@
         <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
@@ -104,7 +104,7 @@
 			if(p1 == "N/A"){
 				document.getElementById("p1").innerText = "Select"
 				document.getElementById("p1").classList = "btn btn-primary btn-sm"
-				document.getElementById("p1").href = "./selection.html"
+				document.getElementById("p1").href = "./plenary.html?v=1"
 			}else{
 				document.getElementById("p1").href = p1
 			}
@@ -112,7 +112,7 @@
 			if(p2 == "N/A"){
 				document.getElementById("p2").innerText = "Select"
 				document.getElementById("p2").classList = "btn btn-primary btn-sm"
-				document.getElementById("p2").href = "./selection.html"
+				document.getElementById("p2").href = "./plenary.html?v=2"
 			}else{
 				document.getElementById("p2").href = p1
 			}
