--- a/reg/plenarySuccess.html
+++ b/reg/plenarySuccess.html
@@ -76,7 +76,7 @@
         <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=Internal+Sign-up+Link" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
@@ -86,17 +86,18 @@
 		<div></div>
 		<div class="container">
 			<div class="card card-body">
-				<h1>A bit too early...</h1>
+				<h1>Sorry, you are a bit early...</h1>
 
-        <p>Plenary selections are not open yet! Please come back later</p>
+				<p>Sorry, plenary selection isn't open yet. Please come back and check soon.</p>
+        <!-- <p>You are registered for WAC 2020. We look forward to seeing you!</p> -->
         <hr/>
-        <p>You are being redirected, click <a href="https://worldaffairs.ucc.on.ca/reg/linkhub.html">here</a> if the browser does not redirect you automatically</p>
+        <p>You are being redirected, click <a href="./linkhub.html">here</a> if the browser does not redirect you automatically</p>
 			</div>
     </div>
     <script>
-      setTimeout(()=>{
-        window.location.href='https://worldaffairs.ucc.on.ca/reg/linkhub.html'
-      },5000)
+       setTimeout(()=>{
+         window.location.href="./linkhub.html"
+       },5000)
     </script>
 
 		<footer class="footer text-center mt-3">
