--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -87,7 +87,8 @@
 		<div class="container">
 			<div class="card card-body">
 				<h1 id="val">Select Plenary 1:</h1>
-				<table class="table">
+				<div class="table-responsive">
+					<table class="table table-hover my-4">
 					<thead>
 						<tr>
 							<th scope="col">Title</th>
@@ -117,7 +118,8 @@
               <td><a class="btn btn-primary btn-sm text-white" onclick="handleSelect(4);">Select</a></td>
             </tr>
           </tbody>
-				</table>
+        </table>
+        </div>
 			</div>
 		</div>
 
