--- a/addresses/index.html
+++ b/addresses/index.html
@@ -141,7 +141,7 @@
 </footer>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
-<script src="../js/tether.min.js></script>
+<script src="../js/tether.min.js"></script>
 
 
   </body>
