--- a/plenaries/media.html
+++ b/plenaries/media.html
@@ -147,7 +147,7 @@
 </footer>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
-<script src="../js/tether.min.js></script>
+<script src="../js/tether.min.js"></script>
 
 	</body>
 </html>
