--- a/reg/lookup.html
+++ b/reg/lookup.html
@@ -145,7 +145,7 @@
   
   <script src="../js/jquery.min.js"></script>
   <script src="../js/bootstrap.min.js"></script>
-  <script src="../js/tether.min.js></script>
+  <script src="../js/tether.min.js"></script>
   </body>
 
 </html>
