--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -158,7 +158,7 @@
 
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
-<script src="../js/tether.min.js></script>
+<script src="../js/tether.min.js"></script>
 
 
   </body>
