--- a/reg/success.html
+++ b/reg/success.html
@@ -121,7 +121,7 @@
 
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
-<script src="../js/tether.min.js></script>
+<script src="../js/tether.min.js"></script>
 
 
   </body>
