--- a/reg/lookup.html
+++ b/reg/lookup.html
@@ -1,151 +1,248 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="The World Affairs Conference">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="author" content="The World Affairs Conference" />
 
-  <title>Contact WAC | The World Affairs Conference</title>
-  <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
+    <title>Schedule | The World Affairs Conference</title>
+    <meta
+      name="description"
+      content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth."
+    />
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-  <link rel="stylesheet" href= "../css/bootstrap.min.css">
-  <link rel="stylesheet" href= "../css/style.css">
-  <style>
-		html, body {
-			width: 100%;
-			height: 100%;
-		}
-		body{
-			background-image:url("../img/earth.png"),url("../img/stars.png");
-			background-repeat:no-repeat;
-		}
-		.flex-vertical {
-			width: 100vw;
-			height: 100%;
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-		}
-	</style>
-</head>
-
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="../img/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="../img/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../img/favicon-16x16.png"
+    />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <style>
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+      }
+      body {
+        background-image: url("../img/earth.png"), url("../img/stars.png");
+        background-repeat: no-repeat;
+      }
+      .flex-vertical {
+        width: 100vw;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+    </style>
+  </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+      <a class="navbar-brand" href="../index.html"
+        ><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="nav navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="../keynote/index.html">Keynote</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../addresses/index.html">Addresses</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../faq/index.html">FAQ</a>
-      </li>
-      <!--
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="nav navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="../keynote/index.html">Keynote</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../addresses/index.html">Addresses</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../faq/index.html">FAQ</a>
+          </li>
+          <!--
       <li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       -->
-      <li class="nav-item active">
-        <a class="nav-link" href="../schedule/index.html">Schedule</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../contact/index.html">Contact</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav float-lg-right">
-      <li class="nav-item mr-2">
-        <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
-      </li>
-      <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://attendee.gotowebinar.com/register/6122619915197970701?source=WebPage" data-proofer-ignore>Register</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<script>
-  function setCookie(name,value,days) {
-    var expires = "";
-    if (days) {
-        var date = new Date();
-        date.setTime(date.getTime() + (days*24*60*60*1000));
-        expires = "; expires=" + date.toUTCString();
-    }
-    document.cookie = name + "=" + (value || "")  + expires + "; path=/";
-}
-
-  function handleLookup(){
-    document.getElementById("loading").classList.remove("d-none");
-    var email = document.getElementById("emailLookup").value;
-    fetch(`https://us-central1-wac2021-d98f6.cloudfunctions.net/lookUp?email=${email}`)
-      .then(resp=>{
-        return(resp.json())
-      })
-      .then(json=>{
-        if(!json.registered){
-          window.location.href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage";
-        }else{
-          setCookie("token",json.token,0.5)
-          window.location.href="./linkhub.html"
+          <li class="nav-item active">
+            <a class="nav-link" href="../schedule/index.html">Schedule</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../contact/index.html">Contact</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav float-lg-right">
+          <li class="nav-item mr-2">
+            <a
+              class="btn btn-outline-danger"
+              href="../wacathon/index.html"
+              data-proofer-ignore
+              >SPRINT</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="btn btn-outline-primary"
+              href="https://attendee.gotowebinar.com/register/6122619915197970701?source=WebPage"
+              data-proofer-ignore
+              >Register</a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <script>
+      function setCookie(name, value, days) {
+        var expires = "";
+        if (days) {
+          var date = new Date();
+          date.setTime(date.getTime() + days * 24 * 60 * 60 * 1000);
+          expires = "; expires=" + date.toUTCString();
         }
-        
-      })
-  }
-</script>
-	<div class="flex-vertical">
-		<div></div>
-		<div class="container">
-			<div class="card card-body">
-				<h1>Find your schedule</h1>
+        document.cookie = name + "=" + (value || "") + expires + "; path=/";
+      }
 
-				<div class="input-group mb-3">
-					<!-- <div class="input-group-prepend">
+      function handleLookup() {
+        document.getElementById("loading").classList.remove("d-none");
+        var email = document.getElementById("emailLookup").value;
+        fetch(
+          `http://localhost:5001/wac2021-d98f6/us-central1/lookUp?email=${email}`
+        )
+          .then((resp) => {
+            return resp.json();
+          })
+          .then((json) => {
+            if (!json.registered) {
+              window.location.href =
+                "https://register.gotowebinar.com/register/6122619915197970701?source=WebPage";
+            } else {
+              if (!json.setup) {
+                window.location.href = `./pin.html?e=${json.email}&setup=1`;
+              } else {
+                window.location.href = `./pin.html?e=${json.email}`;
+              }
+            }
+          });
+      }
+    </script>
+    <div class="flex-vertical">
+      <div></div>
+      <div class="container">
+        <div class="card card-body">
+          <h1>Find your schedule</h1>
+
+          <div class="input-group mb-3">
+            <!-- <div class="input-group-prepend">
 						<span class="input-group-text" id="inputGroup-sizing-default">Email</span>
 					</div> -->
-					<input id="emailLookup" type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" placeholder="Email...">
-          <button onclick="handleLookup();" class="btn btn-primary" style="margin-left: 15px;">Submit</button>
-          
+            <input
+              id="emailLookup"
+              type="email"
+              class="form-control"
+              aria-label="Default"
+              aria-describedby="inputGroup-sizing-default"
+              placeholder="Email..."
+            />
+            <button
+              onclick="handleLookup();"
+              class="btn btn-primary"
+              style="margin-left: 15px"
+            >
+              Submit
+            </button>
+          </div>
+          <p id="loading" class="pl-2 d-none">Loading...</p>
         </div>
-        <p id="loading" class="pl-2 d-none">Loading...</p>
-			</div>
-		</div>
+      </div>
 
-		<footer class="footer text-center mt-3">
-			<div class="container">
-				<p>
-					The World Affairs Conference website, made by the <a class="white-icon" style="text-decoration:underline;" href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
-				</p>
-				<p>
-					Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
-				</p>
-				<a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
-				<a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
-				<a href="https://instagram.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-instagram white-icon"></span></a>
-				<a href="https://twitter.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-twitter white-icon"></span></a>
-				<a href="https://github.com/worldaffairsconference/world.ac"><span class="fab fa-fw fa-2x fa-github white-icon"></span></a>
-			</div>
-		</footer>
-  </div>
-  
-  <script src="../js/jquery.min.js"></script>
-  <script src="../js/bootstrap.min.js"></script>
-  <script src="../js/tether.min.js"></script>
+      <footer class="footer text-center mt-3">
+        <div class="container">
+          <p>
+            The World Affairs Conference website, made by the
+            <a
+              class="white-icon"
+              style="text-decoration: underline"
+              href="https://github.com/worldaffairsconference"
+              target="_blank"
+              >WAC team</a
+            >
+            with <span class="fa fa-heart" style="color: red"></span> and
+            <a
+              href="https://github.com/worldaffairsconference/world.ac"
+              style="color: inherit"
+              ><span class="fab fa-github"></span
+            ></a>
+          </p>
+          <p>
+            Have any questions or concerns? Check out
+            <a
+              class="white-icon"
+              href="../faq/index.html"
+              style="text-decoration: underline"
+              >our FAQ</a
+            >
+            or
+            <a
+              class="white-icon"
+              href="../contact/index.html"
+              style="text-decoration: underline"
+              >get in touch with us!</a
+            >
+          </p>
+          <a href="mailto:wac@ucc.on.ca"
+            ><span class="fa fa-fw fa-2x fa-envelope white-icon"></span
+          ></a>
+          <a href="https://www.facebook.com/worldaffairsconference/"
+            ><span class="fab fa-fw fa-2x fa-facebook white-icon"></span
+          ></a>
+          <a href="https://instagram.com/WorldAffairsCon"
+            ><span class="fab fa-fw fa-2x fa-instagram white-icon"></span
+          ></a>
+          <a href="https://twitter.com/WorldAffairsCon"
+            ><span class="fab fa-fw fa-2x fa-twitter white-icon"></span
+          ></a>
+          <a href="https://github.com/worldaffairsconference/world.ac"
+            ><span class="fab fa-fw fa-2x fa-github white-icon"></span
+          ></a>
+        </div>
+      </footer>
+    </div>
+
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/tether.min.js"></script>
   </body>
-
 </html>
