--- a/reg/success.html
+++ b/reg/success.html
@@ -88,15 +88,16 @@
 			<div class="card card-body">
 				<h1>Success!</h1>
 
-        <p>You are registered for WAC 2020. We look forward to seeing you!</p>
+        <p>You are registered for WAC 2020. We look forward to seeing you! </p>
+          <h3>You can check your schedule and select plenaries from the next page.</h3> 
         <hr/>
-        <p>You are being redirected, click <a href="https://worldaffairs.ucc.on.ca">here</a> if the browser does not redirect you automatically</p>
+        <p>You are being redirected, click <a href="https://worldaffairs.ucc.on.ca/reg/lookup.html">here</a> if the browser does not redirect you automatically</p>
 			</div>
     </div>
     <script>
       setTimeout(()=>{
-        window.location.href='https://worldaffairs.ucc.on.ca'
-      },3000)
+        window.location.href='https://worldaffairs.ucc.on.ca/reg/lookup.html'
+      },4000)
     </script>
 
 		<footer class="footer text-center mt-3">
