update footer notice

--- a/reg/linkhub.html
+++ b/reg/linkhub.html
@@ -288,7 +288,8 @@
           <p>
             Please <a href="../contact/">contact us</a> if you have any issues
             or would like to change your plenary selection.
-          </p>
+		  </p>
+		  <p>Please wait a couple of seconds for the selections to take effect on your schedule</p>
         </div>
       </div>
 
