--- a/team/index.html
+++ b/team/index.html
@@ -103,7 +103,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Lauren Mahony"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/lmahony.jpg" alt="Lauren Mahony"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Lauren Mahony</h4>
@@ -123,7 +123,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Karam Bambawale"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/kabambawale.jpg" alt="Karam Bambawale"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Karam Bambawale</h4>
@@ -154,7 +154,7 @@
       <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Bill Chan"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/bchan.jpg" alt="Bill Chan"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Bill Chan</h4>
@@ -188,7 +188,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Max Rivett"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/mrivett.jpg" alt="Max Rivett"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Max Rivett</h4>
@@ -221,7 +221,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Tayo Steininger"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/tsteininger.jpg" alt="Tayo Steininger"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Tayo Steininger</h4>
@@ -236,7 +236,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Princeton Zhou"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/pzhou.jpg" alt="Princeton Zhou"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Princeton Zhou</h4>
@@ -252,7 +252,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Amonda Li"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/ali.jpg" alt="Amonda Li"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Amonda Li</h4>
@@ -283,7 +283,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Emma Zhou"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/ezhou.jpg" alt="Emma Zhou"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Emma Zhou</h4>
@@ -299,7 +299,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Lauren Shatilla"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/lshatilla.jpg" alt="Lauren Shatilla"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Lauren Shatilla</h4>
@@ -432,7 +432,7 @@
             <div class="col">
             <div class="row mt-4 mb-4">
                 <div class="col-sm-4">
-                  <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Dhruv Sharma"/>
+                  <img class="img-fluid rounded-circle" src="../img/staff/dsharma.jpg" alt="Dhruv Sharma"/>
                 </div>
                 <div class="col-sm-8">
                   <h4 class="card-title">Dhruv Sharma</h4>
@@ -691,7 +691,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Maylee Mann"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/mmann.jpg" alt="Maylee Mann"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Maylee Mann</h4>
@@ -725,7 +725,7 @@
             <div class="col">
                 <div class="row mt-4 mb-4">
                   <div class="col-sm-4">
-                    <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Justin Lee"/>
+                    <img class="img-fluid rounded-circle" src="../img/staff/jlee.jpg" alt="Justin Lee"/>
                   </div>
                   <div class="col-sm-8">
                     <h4 class="card-title">Justin Lee</h4>
@@ -825,7 +825,7 @@
                 <div class="col">
                     <div class="row mt-4 mb-4">
                       <div class="col-sm-4">
-                        <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Seungmyoung Lee"/>
+                        <img class="img-fluid rounded-circle" src="../img/staff/slee.jpg" alt="Seungmyoung Lee"/>
                       </div>
                       <div class="col-sm-8">
                         <h4 class="card-title">Seungmyoung Lee</h4>
@@ -875,7 +875,7 @@
             <div class="col">
                 <div class="row mt-4 mb-4">
                   <div class="col-sm-4">
-                    <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Lara Worth"/>
+                    <img class="img-fluid rounded-circle" src="../img/staff/lworth.jpg" alt="Lara Worth"/>
                   </div>
                   <div class="col-sm-8">
                     <h4 class="card-title">Lara Worth</h4>
@@ -976,7 +976,7 @@
               <div class="col">
                 <div class="row mt-4 mb-4">
                   <div class="col-sm-4">
-                    <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Ore Maxwell"/>
+                    <img class="img-fluid rounded-circle" src="../img/staff/omaxwell.jpg" alt="Ore Maxwell"/>
                   </div>
                   <div class="col-sm-8">
                     <h4 class="card-title">Ore Maxwell</h4>
@@ -1008,7 +1008,7 @@
               <div class="col">
                 <div class="row mt-4 mb-4">
                   <div class="col-sm-4">
-                    <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Vita Jackman Kuwabara"/>
+                    <img class="img-fluid rounded-circle" src="../img/staff/vjackman.jpg" alt="Vita Jackman Kuwabara"/>
                   </div>
                   <div class="col-sm-8">
                     <h4 class="card-title">Vita Jackman Kuwabara</h4>
